--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "graphql-tag": "^2.11.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
+    "normalize.css": "^8.0.1",
     "qs": "^6.9.4",
     "rc-queue-anim": "^1.8.5",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-dropdown-select": "^4.5.1",
@@ -24,12 +26,17 @@
     "react-icons": "^3.11.0",
     "react-loader-spinner": "^3.1.14",
     "react-nice-dates": "^3.0.7",
+    "react-player": "^2.6.2",
     "react-progressive-image": "^0.6.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-typical": "^0.1.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "string-to-color": "^2.2.2",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "npm run build:css && react-scripts start",
