--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Pupbot",
-  "name": "Pupbot",
+  "short_name": "Story App",
+  "name": "story app",
   "icons": [
     {
       "src": "favicon.ico",
